# rust-template

./: Cargo.toml  README.md  README.template.md  rustfmt.toml
.github/workflows/: cd.yml  cd_acr.yaml  ci.yml
src/: main.rs
