[package]
name = "rust_template"
version = "0.1.7"
edition = "2021"
description = "Example of Rust GitHub template"
repository = "https://github.com/runtime-machines/rust-template"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
